force-app/main/default/objects/Open_Opportunity_Count__c/Open_Opportunity_Count__c.object-meta.xml
<CustomObject>
    <description>Used for Analytics Reporting on all Open Opportunities in the pipeline</description>
    <label>Open Opportunity Count</label>
    <nameField>
        <label>Open Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Open Opportunities Count</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>