force-app/main/default/objects/Open_Opportunity_Count__c/fields/BRD_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>BRD_Submission_Date__c</fullName>
    <label>BRD Submission Date</label>
    <type>Date</type>
</CustomField>