force-app/main/default/objects/Open_Opportunity_Count__c/fields/From_Stage__c.field-meta.xml
<CustomField>
    <fullName>From_Stage__c</fullName>
    <label>From Stage</label>
    <type>TextArea</type>
</CustomField>