force-app/main/default/objects/Open_Opportunity_Count__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <label>Opportunity Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>