force-app/main/default/objects/Open_Opportunity_Count__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <label>Owner Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>