force-app/main/default/objects/Open_Opportunity_Count__c/fields/Products_Services__c.field-meta.xml
<CustomField>
    <fullName>Products_Services__c</fullName>
    <label>Products / Services</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>