force-app/main/default/objects/Open_Opportunity_Count__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>TextArea</type>
</CustomField>