force-app/main/default/objects/Open_Opportunity_Count__c/fields/To_Stage__c.field-meta.xml
<CustomField>
    <fullName>To_Stage__c</fullName>
    <label>To Stage</label>
    <type>TextArea</type>
</CustomField>