force-app/main/default/objects/Open_Opportunity_Count__c/fields/Weekly_Updates__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Updates__c</fullName>
    <label>Weekly Updates</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>